# nekScaling

./: .gitignore  README.md  comparison_plots.py
CPX/: download_results.sh  plotting.py  plotting_run1.py  plotting_run2.py  plotting_run2_collated.py  plotting_run2a.py  plotting_run2b.py  plotting_run3.py  scaling.py
CPX/128_ranks/: submit_array.mi300x
CPX/12_ranks/: submit_array.mi300x
CPX/16_ranks/: submit_array.mi300x
CPX/24_ranks/: submit_array.mi300x
CPX/32_ranks/: submit_array.mi300x
CPX/40_ranks/: submit_array.mi300x
CPX/48_ranks/: submit_array.mi300x
CPX/56_ranks/: submit_array.mi300x
CPX/64_ranks/: submit_array.mi300x
CPX/8_ranks/: submit_array.mi300x
QPX/: download_results.sh
QPX/16_ranks/: submit_array.mi300x
QPX/32_ranks/: submit_array.mi300x
QPX/8_ranks/: submit_array.mi300x
SPX/: download_results.sh  plotting_run1.py
SPX/16_ranks/: submit_array.mi300x
SPX/1_rank/: submit_array.mi300x
SPX/1_ranks/: submit_array.mi300x
SPX/2_ranks/: submit_array.mi300x
SPX/4_ranks/: submit_array.mi300x
SPX/6_ranks/: submit_array.mi300x
SPX/8_ranks/: submit_array.mi300x
cases/laminarPipe/: README.md  laminarPipe.par  mesh.jou
cases/turbulentPipe/: README.md  exo2nek.sh  pipe.jou  pipe.par  pipe.udf  pipe.usr
laminarPipe/: hvt_plots.py  log2tsv.sh
laminarPipe/CPX/: plotting_run2_collated.py  plotting_run2a.py  plotting_run2b.py
laminarPipe/CPX/12_ranks/: submit_array.mi300x
laminarPipe/SPX/: plotting_run2.py
laminarPipe/base/: laminarPipe.oudf  laminarPipe.udf
utils/: pyproject.toml
utils/pyscaling/: __init__.py
(+40 files in other folders)
