[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscaling"
version = "0.1"
authors = [
    {name = "Rupert Eardley-Brunt"}
]
description = ""
readme = "README.md"
dependencies = [
    "numpy",
    # "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = [
    "pyscaling/scaling",
]